longhorn/patch.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: longhorn-manager
spec:
  template:
    spec:
      - name: longhorn
        hostPath:
          path: /opt/storage/longhorn
