longhorn/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`longhorn.kube.internal`)
      middlewares:
        - name: basic-auth
          namespace: middleware
      services:
        - name: longhorn-frontend
          namespace: longhorn-system
          scheme: http
          port: 80
